--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button id="btnDa">DA</button>
             <button id="btnNu">NU</button>
         </div>
-        <img id="gifTomJerry" src="images/tom_jerry_love.gif" alt="Tom și Jerry îndrăgostiți" style="display:none;">
+        <img id="gifTomJerry" src="tom_jerry_love.gif" alt="Tom și Jerry îndrăgostiți" style="display:none;">
 
     </div>
     <script src="script.js"></script>
